--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     h1 {
       font-size: 2.8em;
       margin-bottom: 20px;
-      color: #ffffff;
+      color: #28126f;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
     }
     p {
       font-size: 1.2em;
       margin-bottom: 30px;
-      color: #f1f1f1;
+      color: #240a66;
       max-width: 600px;
     }
     button {
