--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     const letters = document.querySelectorAll('#slide3 .letter');
     const enterBtn = document.getElementById('enterBtn');
     const deleteBtn = document.getElementById('deleteBtn');
-    const correctAnswer = "arissayang";  // Jawaban yang benar
+    const correctAnswer = "sayang";  // Jawaban yang benar
 
     // Menambahkan huruf yang diklik ke dalam tampilan
     letters.forEach(letter => {
