--- a/index.html
+++ b/index.html
@@ -211,15 +211,15 @@
     <div id="display"></div>
 
     <div id="letters">
+        <div class="letter">g</div>
+        <div class="letter">n</div>
+        <div class="letter">a</div>
+        <div class="letter">y</div>
         <div class="letter">a</div>
         <div class="letter">s</div>
-        <div class="letter">g</div>
-        <div class="letter">f</div>
-        <div class="letter">r</div>
-        <div class="letter">w</div>
         <div class="letter">i</div>
-        <div class="letter">n</div>
-        <div class="letter">y</div>
+        <div class="letter">p</div>
+        <div class="letter">w</div>
         <div class="letter">e</div>
         <div class="letter">m</div>
         <div class="letter">c</div>
